# mcmigrator

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml  requirements.txt
Reference/design/: classifier-rules.md  hashing-strategy.md  planner-rules.md
Reference/plans/: 2026-07-02-migration-v0.md  2026-07-07-planner-v1-phase1.md
Reference/specs/: 2026-07-02-migration-v0-design.md  2026-07-07-planner-v1-phase1-design.md  2026-07-09-planner-refinement-design.md
docs/superpowers/plans/: 2026-07-09-planner-refinement.md
migration/: __init__.py  __main__.py  classifier.py  cli.py  differ.py  hashing.py  plan.py  planner.py  reporter.py  rules.py  scanner.py  snapshot.py
migration/data/: default_rules.yaml  rebuild.yaml  whitelist.yaml
tests/: conftest.py  test_classifier.py  test_cli.py  test_differ.py  test_e2e.py  test_hashing.py  test_plan.py  test_planner.py  test_reporter.py  test_rules.py  test_scanner.py  test_snapshot.py
